--- a/qrcode-scanner.html
+++ b/qrcode-scanner.html
@@ -22,7 +22,8 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  height: 270px;
+  width: 420px;
   padding: 0 10px;
   background: #E3F2FD;
 }
