--- a/qrcode-scanner.html
+++ b/qrcode-scanner.html
@@ -22,8 +22,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 270px;
-  width: 420px;
+  min-height: 100vh;
   padding: 0 10px;
   background: #E3F2FD;
 }
