--- a/qrcode-scanner.html
+++ b/qrcode-scanner.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
+<!-- Coding By QILLASOFT -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">  
-    <title>QR Code Scanner or Reader | CodingNepal</title>
+    <title>QR Code Scanner or Reader | QILLASOFT</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/qillasoft/code/qrcode-scanner.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Awesome CDN Link for Icons -->
