--- a/qrcode-scanner/html.html
+++ b/qrcode-scanner/html.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">  
     <title>QR Code Scanner or Reader | QILLASOFT</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/qillasoft/code/qrcode-scanner/style.css">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Awesome CDN Link for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -28,6 +28,6 @@
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/gh/qillasoft/code/qrcode-scanner/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
