--- a/qrcode-scanner/index.html
+++ b/qrcode-scanner/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+<!-- Coding By QILLASOFT -->
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8">  
+    <title>QR Code Reader | QILLASOFT</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Awesome CDN Link for Icons -->
