--- a/qrcode-scanner/index.html
+++ b/qrcode-scanner/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">  
-    <title>QR Code Reader | QILLASOFT</title>
+    <title>QR Code Scanner | QILLASOFT</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Awesome CDN Link for Icons -->
@@ -27,6 +27,7 @@
         </div>
       </div>
     </div>
+    <p>Created By : ZHAFRAN</p>
 
     <script src="script.js"></script>
 
