--- a/color-picker-2/index.html
+++ b/color-picker-2/index.html
@@ -1,8 +1,8 @@
 <div class="color-widget" onclick="colorPick(event)"><form id="arlina-pick"><input type="text" id="coloredvalue" value="" onClick="SelectAll('coloredvalue');" tabindex="-1" placeholder="Pick your color and copy" style="color:#ccc;" readonly><br />
 </form></div>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/qillasoft/code/color-picker-2/style.css">
 <br />
-<script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/qillasoft/code/color-picker-2/script.js"></script>
 <br />
 <script type="text/javascript">
 $('<input type="text" id="coloredvalue" value="">').appendTo('body');
