--- a/frame-collect-001/index.html
+++ b/frame-collect-001/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+  <body>
     <div class="qillasoft-scroll-container">
     <div class="qillasoft-gridscroll">
       <img src="https://lh3.googleusercontent.com/pw/AL9nZEX99aS_nMEWOFRdTfCweMT_7-mu7_GTQx4E9I3KLxiD2qah7VkP2lND1Lutuxd-WX09gx73iSi4fYQcYmPb-TzIyYVmuiIeHSuIOKBsAfRM3xqxHd0aKiiScve_AyDjMiDP5DCWbUPu6Jf1eoC7kFOZ=w149-h100-no?authuser=1" />
@@ -37,4 +38,5 @@
       <img src="https://lh3.googleusercontent.com/pw/AL9nZEVJi9JKNqIJptU19Igw079ikXjQFsQhHANXSZjJMTB61XZITYMRlmVSC3LX1WP_H2a_4kNH2lULFeX6RIWIE_TH2H_s8qql6g5OLdwKb-jzzVZ5RbSLbmzpqXdKXc7C1N8VMo_DGGoTdvLlneanvJ0N=w150-h100-no?authuser=1" />
     </div>
     </div>
+  </body>
 </html>
