--- a/frame-collect-001/index.html
+++ b/frame-collect-001/index.html
@@ -1,4 +1,4 @@
-/* Coding By QILLASOFT | www.qillasoft.com */
+<!-- Coding By QILLASOFT | www.qillasoft.com -->
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
