--- a/game/snake-game/index.html
+++ b/game/snake-game/index.html
@@ -5,7 +5,7 @@
         <title>Snake Game</title>    
     </head>
     <body>
-        <canvas id="ruang" width="500" height="500"></canvas>
+        <canvas style="text-align:center" id="ruang" width="500" height="500"></canvas>
         <script src="script.js" type="text/javascript"></script>
         </body>
 </html>
