--- a/game/DuckHunt/index.html
+++ b/game/DuckHunt/index.html
@@ -15,7 +15,7 @@
       background-color: #000000;
     }
   </style>
-  <script src="duckhunt.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
 </body>
